# OpenWanderary-examples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
configs/: stat_yolov8_time_cfg.yaml
examples/: CMakeLists.txt  yolo8_image.cpp
python/: yolo8_image.py
